# krill

./: .gitignore  API_REFERENCE.md  README.md  build.zig  build.zig.zon  ja.md  logger.py  logger_output.json  logger_output_dict.json  memo.md  pyproject.toml  sample.py
.github/workflows/: python-publish.yml
c_krill/: __init__.py  core.py  generate_json.py  util.py
c_krill/krill.egg-info/: PKG-INFO  SOURCES.txt
c_krill/lib/: lib.lib
c_krill/test/: test_core.py  test_generate_json.py
core/: build.zig
core/src/: _core.zig  config.zig  core.zig  json.zig  lib.zig  struct.zig  util.zig
core/test/: logger.py  logger2.py
example/: logger.py
example/c_krill/: logger.py
example/generate_json/: index.py  logger_output.json  logger_output2.json
krill/: core.py  generate_json.py  util.py
krill/lib/: liblogger.dylib
krill/test/: test_core.py
src/: Json.zig  core.zig  json.zig  main.zig  util.zig
test/: README.md  logger_output.json  logger_output2.json  logger_output3.json  logger_output4.json  test_core.py  test_generate_json.py
